<resources>
    <string name="app_name">Werewolf</string>
    <string name="game_intro">Werewolves made by Xebia\n\nGoogle Assistant SDK + api.ai + Node.js + Firebase + Android (Kotlin) + Google Cloud Platform </string>
    <string name="enter_game_id">Enter Game ID</string>
    <string name="btn_submit">Submit</string>
    <string name="user_name_prompt">You are about to join game %s. Please Enter your name</string>
    <string name="enter_player_name">Player Name</string>
    <string name="btn_join_game">Join Game</string>
    <string name="waiting_for_role_prompt">Thank you <b>%s</b> for joining! The game will start soon…</string>
    <string name="tap_to_reveal">Tap to \nreveal \nyour role</string>
    <string name="btn_start_game">Start Game</string>
    <string name="game_info_prompt">Enter the game ID announced by the game master:</string>

    <string name="error_play_name_taken">This player name is already taken, please change to another one.</string>
    <string name="error_game_not_exist">This game doesn\'t exist</string>
    <string name="werewolves_vote_prompt">Please kill a villager</string>
    <string name="btn_kill">Kill</string>
    <string name="btn_ready_to_play">Ready to Play</string>
    <string name="sleep_during_night">Night falls, village sleeps...</string>
    <string name="player_vote_prompt">Player vote one player</string>
    <string name="btn_vote">Vote</string>
    <string name="player_voted_prompt">Thanks for the wait, please wait for others...</string>
</resources>
