<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.xebia.werewolf.round.DayActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dayVotePrompt"
        style="@style/wwPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin30"
        android:gravity="center"
        android:text="@string/player_vote_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintBottom_toTopOf="@+id/buttonVotePlayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayVotePrompt"
        tools:listitem="@layout/view_player" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonVotePlayer"
        style="@style/wwButtonRed"
        android:layout_marginBottom="@dimen/margin30"
        android:enabled="false"
        android:text="@string/btn_vote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/votedPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_voted_prompt"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
