<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="fr.xebia.werewolf.PlayerInfoActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideLineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/wolf_logo_size_small"
        android:layout_height="@dimen/wolf_logo_size_small"
        android:layout_marginBottom="@dimen/margin20"
        android:src="@drawable/werewolf"
        app:layout_constraintBottom_toTopOf="@+id/playerInfoPrompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/playerInfoPrompt"
        style="@style/wwPromptTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/user_name_prompt"
        app:layout_constraintBottom_toTopOf="@+id/editTextPlayerName"
        app:layout_constraintLeft_toLeftOf="@+id/guideLineLeft"
        app:layout_constraintRight_toRightOf="@+id/guideLineRight" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_player_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/guideLineLeft"
        app:layout_constraintRight_toRightOf="@+id/guideLineRight"
        app:layout_constraintTop_toBottomOf="@+id/guideLineCenter" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonJoinGame"
        style="@style/wwButtonGreen"
        android:layout_marginTop="@dimen/margin30"
        android:text="@string/btn_join_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlayerName" />

</android.support.constraint.ConstraintLayout>
